Finish adding wikidata_id, rename api_key
